# browser-rs

./: Cargo.toml  README.md  TODO.md  rustfmt.toml
assets/: test.html
crates/html/src/: lexer.rs  parser.rs
src/: app.rs  camera.rs  html_renderer.rs  lalg.rs  main.rs  renderer.rs
src/shaders/: quad.frag  quad.vert
