[workspace]
members = ["crates/html"]

[package]
name = "browser-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html = { path = "crates/html" }
glium = "0.32.0"
nalgebra-glm = "0.3"
glyph_brush = "0.7"
glium-glyph = "0.14.0"
